@@ -41,13 +41,13 @@ public class DietCommentService {
         List<DietCommentDto> dtos = comments.stream()
                 .map(c -> DietCommentDto.create(c, c.getMember().getProfileId())).toList();
         Map<Boolean, List<DietCommentDto>> dtos2 = dtos.stream()
-                .collect(Collectors.partitioningBy(c -> c.getParentCommentId() == null));
+                .collect(Collectors.partitioningBy(c -> c.getParentId() == null));
         List<DietCommentDto> parent = dtos2.get(true);
         List<DietCommentDto> child = dtos2.get(false);
 
         Map<Long, List<DietCommentDto>> childByGroupList = child.stream()
-                .collect(Collectors.groupingBy(DietCommentDto::getParentCommentId, Collectors.toList()));
-        return parent.stream().peek(p -> p.setReply(childByGroupList.get(p.getCommentId()))).toList();
+                .collect(Collectors.groupingBy(DietCommentDto::getParentId, Collectors.toList()));
+        return parent.stream().peek(p -> p.setReplies(childByGroupList.get(p.getCommentId()))).toList();
     }
 
     public void addComment(Long dietId, DietCommentAddCommand command, Member member) {
